Add network identifier for Shelley QA network

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -2087,16 +2087,30 @@
       },
       {
         "defaultMessage": "!!!Shelley Friends & Family Testnet",
-        "description": "Label for ff with version.",
+        "description": "Label for shelley_ff with version.",
         "end": {
           "column": 3,
           "line": 27
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
-        "id": "test.environment.ffLabel",
+        "id": "test.environment.shelleyFfLabel",
         "start": {
-          "column": 6,
+          "column": 14,
           "line": 23
+        }
+      },
+      {
+        "defaultMessage": "!!!Shelley QA",
+        "description": "Label for shelley_qa with version.",
+        "end": {
+          "column": 3,
+          "line": 32
+        },
+        "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
+        "id": "test.environment.shelleyQaLabel",
+        "start": {
+          "column": 14,
+          "line": 28
         }
       },
       {
@@ -2104,13 +2118,13 @@
         "description": "Label for development with version.",
         "end": {
           "column": 3,
-          "line": 32
+          "line": 37
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.developmentLabel",
         "start": {
           "column": 15,
-          "line": 28
+          "line": 33
         }
       },
       {
@@ -2118,13 +2132,13 @@
         "description": "Label for nightly with version.",
         "end": {
           "column": 3,
-          "line": 37
+          "line": 42
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.nightlyLabel",
         "start": {
           "column": 11,
-          "line": 33
+          "line": 38
         }
       },
       {
@@ -2132,13 +2146,13 @@
         "description": "Label for qa with version.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 47
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.qaLabel",
         "start": {
           "column": 6,
-          "line": 38
+          "line": 43
         }
       },
       {
@@ -2146,13 +2160,13 @@
         "description": "Label for selfnode with version.",
         "end": {
           "column": 3,
-          "line": 47
+          "line": 52
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.selfnodeLabel",
         "start": {
           "column": 12,
-          "line": 43
+          "line": 48
         }
       },
       {
@@ -2160,13 +2174,13 @@
         "description": "Label for ITN selfnode with version.",
         "end": {
           "column": 3,
-          "line": 52
+          "line": 57
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.itnSelfnodeLabel",
         "start": {
           "column": 16,
-          "line": 48
+          "line": 53
         }
       },
       {
@@ -2174,13 +2188,13 @@
         "description": "Label for ITN Rewards V1 with version.",
         "end": {
           "column": 3,
-          "line": 57
+          "line": 62
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.itnRewardsV1Label",
         "start": {
           "column": 18,
-          "line": 53
+          "line": 58
         }
       },
       {
@@ -2188,13 +2202,13 @@
         "description": "Label for Daedalus Flight with version.",
         "end": {
           "column": 3,
-          "line": 62
+          "line": 67
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.daedalusFlightLabel",
         "start": {
           "column": 10,
-          "line": 58
+          "line": 63
         }
       }
     ],
@@ -11403,16 +11417,30 @@
       },
       {
         "defaultMessage": "!!!Shelley Friends & Family Testnet",
-        "description": "Label for ff with version.",
+        "description": "Label for shelley_ff with version.",
         "end": {
           "column": 3,
           "line": 22
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
-        "id": "test.environment.ffLabel",
+        "id": "test.environment.shelleyFfLabel",
         "start": {
-          "column": 6,
+          "column": 14,
           "line": 18
+        }
+      },
+      {
+        "defaultMessage": "!!!Shelley QA",
+        "description": "Label for shelley_qa with version.",
+        "end": {
+          "column": 3,
+          "line": 27
+        },
+        "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
+        "id": "test.environment.shelleyQaLabel",
+        "start": {
+          "column": 14,
+          "line": 23
         }
       },
       {
@@ -11420,13 +11448,13 @@
         "description": "Label for development with version.",
         "end": {
           "column": 3,
-          "line": 27
+          "line": 32
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.developmentLabel",
         "start": {
           "column": 15,
-          "line": 23
+          "line": 28
         }
       },
       {
@@ -11434,13 +11462,13 @@
         "description": "Label for nightly with version.",
         "end": {
           "column": 3,
-          "line": 32
+          "line": 37
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.nightlyLabel",
         "start": {
           "column": 11,
-          "line": 28
+          "line": 33
         }
       },
       {
@@ -11448,13 +11476,13 @@
         "description": "Label for qa with version.",
         "end": {
           "column": 3,
-          "line": 37
+          "line": 42
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.qaLabel",
         "start": {
           "column": 6,
-          "line": 33
+          "line": 38
         }
       },
       {
@@ -11462,13 +11490,13 @@
         "description": "Label for selfnode with version.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 47
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.selfnodeLabel",
         "start": {
           "column": 12,
-          "line": 38
+          "line": 43
         }
       },
       {
@@ -11476,13 +11504,13 @@
         "description": "Label for ITN selfnode with version.",
         "end": {
           "column": 3,
-          "line": 47
+          "line": 52
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.itnSelfnodeLabel",
         "start": {
           "column": 16,
-          "line": 43
+          "line": 48
         }
       },
       {
@@ -11490,13 +11518,13 @@
         "description": "Label for ITN Rewards V1 with version.",
         "end": {
           "column": 3,
-          "line": 52
+          "line": 57
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.itnRewardsV1Label",
         "start": {
           "column": 18,
-          "line": 48
+          "line": 53
         }
       },
       {
@@ -11504,13 +11532,13 @@
         "description": "Label for Daedalus Flight with version.",
         "end": {
           "column": 3,
-          "line": 57
+          "line": 62
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.daedalusFlightLabel",
         "start": {
           "column": 10,
-          "line": 53
+          "line": 58
         }
       }
     ],
@@ -12238,10 +12266,24 @@
           "line": 197
         },
         "file": "source/renderer/app/i18n/global-messages.js",
-        "id": "environment.network.ff",
+        "id": "environment.network.shelley_ff",
         "start": {
-          "column": 14,
+          "column": 22,
           "line": 193
+        }
+      },
+      {
+        "defaultMessage": "!!!Shelley QA",
+        "description": "\"Shelley QA\" Cardano network",
+        "end": {
+          "column": 3,
+          "line": 202
+        },
+        "file": "source/renderer/app/i18n/global-messages.js",
+        "id": "environment.network.shelley_qa",
+        "start": {
+          "column": 22,
+          "line": 198
         }
       },
       {
@@ -12249,13 +12291,13 @@
         "description": "\"development\" Cardano network",
         "end": {
           "column": 3,
-          "line": 202
+          "line": 207
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.development",
         "start": {
           "column": 23,
-          "line": 198
+          "line": 203
         }
       },
       {
@@ -12263,13 +12305,13 @@
         "description": "\"itn_rewards_v1\" Cardano network",
         "end": {
           "column": 3,
-          "line": 207
+          "line": 212
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.itn_rewards_v1",
         "start": {
           "column": 26,
-          "line": 203
+          "line": 208
         }
       },
       {
@@ -12277,13 +12319,13 @@
         "description": "\"itn_selfnode\" Cardano network",
         "end": {
           "column": 3,
-          "line": 212
+          "line": 217
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.itn_selfnode",
         "start": {
           "column": 24,
-          "line": 208
+          "line": 213
         }
       },
       {
@@ -12291,13 +12333,13 @@
         "description": "\"selfnode\" Cardano network",
         "end": {
           "column": 3,
-          "line": 217
+          "line": 222
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.selfnode",
         "start": {
           "column": 20,
-          "line": 213
+          "line": 218
         }
       },
       {
@@ -12305,13 +12347,13 @@
         "description": "\"qa\" Cardano network",
         "end": {
           "column": 3,
-          "line": 222
+          "line": 227
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.qa",
         "start": {
           "column": 14,
-          "line": 218
+          "line": 223
         }
       },
       {
@@ -12319,13 +12361,13 @@
         "description": "\"nightly\" Cardano network",
         "end": {
           "column": 3,
-          "line": 227
+          "line": 232
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.nightly",
         "start": {
           "column": 19,
-          "line": 223
+          "line": 228
         }
       },
       {
@@ -12333,13 +12375,13 @@
         "description": "Label for years value in duration.",
         "end": {
           "column": 3,
-          "line": 232
+          "line": 237
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.years",
         "start": {
           "column": 9,
-          "line": 228
+          "line": 233
         }
       },
       {
@@ -12347,13 +12389,13 @@
         "description": "Label for months value in duration.",
         "end": {
           "column": 3,
-          "line": 237
+          "line": 242
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.months",
         "start": {
           "column": 10,
-          "line": 233
+          "line": 238
         }
       },
       {
@@ -12361,13 +12403,13 @@
         "description": "Label for days value in duration.",
         "end": {
           "column": 3,
-          "line": 242
+          "line": 247
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.days",
         "start": {
           "column": 8,
-          "line": 238
+          "line": 243
         }
       },
       {
@@ -12375,13 +12417,13 @@
         "description": "Label for hours value in duration.",
         "end": {
           "column": 3,
-          "line": 247
+          "line": 252
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.hours",
         "start": {
           "column": 9,
-          "line": 243
+          "line": 248
         }
       },
       {
@@ -12389,13 +12431,13 @@
         "description": "Label for minutes value in duration.",
         "end": {
           "column": 3,
-          "line": 252
+          "line": 257
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.minutes",
         "start": {
           "column": 11,
-          "line": 248
+          "line": 253
         }
       },
       {
@@ -12403,13 +12445,13 @@
         "description": "Label for seconds value in duration.",
         "end": {
           "column": 3,
-          "line": 257
+          "line": 262
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.seconds",
         "start": {
           "column": 11,
-          "line": 253
+          "line": 258
         }
       },
       {
@@ -12417,13 +12459,13 @@
         "description": "From label of range.",
         "end": {
           "column": 3,
-          "line": 262
+          "line": 267
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.range.from",
         "start": {
           "column": 13,
-          "line": 258
+          "line": 263
         }
       },
       {
@@ -12431,13 +12473,13 @@
         "description": "To label of range.",
         "end": {
           "column": 3,
-          "line": 267
+          "line": 272
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.range.to",
         "start": {
           "column": 11,
-          "line": 263
+          "line": 268
         }
       },
       {
@@ -12445,13 +12487,13 @@
         "description": "Filter label.",
         "end": {
           "column": 3,
-          "line": 272
+          "line": 277
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.labels.filter",
         "start": {
           "column": 10,
-          "line": 268
+          "line": 273
         }
       },
       {
@@ -12459,13 +12501,13 @@
         "description": "All label.",
         "end": {
           "column": 3,
-          "line": 277
+          "line": 282
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.labels.all",
         "start": {
           "column": 7,
-          "line": 273
+          "line": 278
         }
       },
       {
@@ -12473,13 +12515,13 @@
         "description": "Reset label.",
         "end": {
           "column": 3,
-          "line": 282
+          "line": 287
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.labels.reset",
         "start": {
           "column": 9,
-          "line": 278
+          "line": 283
         }
       }
     ],
