--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -92,13 +92,14 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "Ada",
   "environment.network.development": "Development",
-  "environment.network.ff": "Shelley Friends & Family Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "Mainnet",
   "environment.network.nightly": "Nightly",
   "environment.network.qa": "QA",
   "environment.network.selfnode": "Selfnode",
+  "environment.network.shelley_ff": "Shelley Friends & Family Testnet",
+  "environment.network.shelley_qa": "Shelley QA",
   "environment.network.staging": "Staging",
   "environment.network.testnet": "Testnet",
   "experimentalData.overlay.actionLabel": "I understand",
@@ -463,13 +464,14 @@
   "systemTime.error.supportPortalLinkUrl": "https://daedaluswallet.io/clock-sync/",
   "test.environment.daedalusFlightLabel": "Cardano mainnet - Daedalus Flight",
   "test.environment.developmentLabel": "Development",
-  "test.environment.ffLabel": "Shelley Friends & Family Testnet",
   "test.environment.itnRewardsV1Label": "Incentivized Testnet v1 - Rewards",
   "test.environment.itnSelfnodeLabel": "ITN Selfnode",
   "test.environment.mainnetLabel": "Mainnet",
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
+  "test.environment.shelleyFfLabel": "Shelley Friends & Family Testnet",
+  "test.environment.shelleyQaLabel": "Shelley QA",
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
   "wallet.add.dialog.create.description": "Create a new wallet",
