--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -92,13 +92,14 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "ADA",
   "environment.network.development": "開発",
-  "environment.network.ff": "Shelley Friends & Family Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "メインネット",
   "environment.network.nightly": "Nightly",
   "environment.network.qa": "QA",
   "environment.network.selfnode": "Selfnode",
+  "environment.network.shelley_ff": "Shelley Friends & Family Testnet",
+  "environment.network.shelley_qa": "Shelley QA",
   "environment.network.staging": "ステージング",
   "environment.network.testnet": "テストネット",
   "experimentalData.overlay.actionLabel": "了解しました",
@@ -463,13 +464,14 @@
   "systemTime.error.supportPortalLinkUrl": "https://daedaluswallet.io/ja/clock-sync/",
   "test.environment.daedalusFlightLabel": "Cardano Mainnet - Daedalus Flight",
   "test.environment.developmentLabel": "開発",
-  "test.environment.ffLabel": "Shelley Friends & Family Testnet",
   "test.environment.itnRewardsV1Label": "Incentivized Testnet v1 - Rewards",
   "test.environment.itnSelfnodeLabel": "ITN Selfnode",
   "test.environment.mainnetLabel": "メインネット",
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
+  "test.environment.shelleyFfLabel": "Shelley Friends & Family Testnet",
+  "test.environment.shelleyQaLabel": "Shelley QA",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
