--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -515,16 +515,18 @@
   "wallet.create.dialog.title.itn": "Create a new Rewards wallet",
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
-  "wallet.hardware.deviceConnectedLabel": "{deviceType} device",
-  "wallet.hardware.hardwareWalletBegin": "To begin, connect and unlock your <span>Hardware wallet Device</span>",
-  "wallet.hardware.hardwareWalletExport": "Export <span>public key</span> on your device",
-  "wallet.hardware.hardwareWalletExportRejected": "Export rejected",
+  "wallet.hardware.deviceStatus.connecting": "Connect your device and enter your PIN to unlock it",
+  "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your device to start the process again",
+  "wallet.hardware.deviceStatus.exporting_public_key": "Confirm exporting your public key on your device",
+  "wallet.hardware.deviceStatus.exporting_public_key_failed": "Exporting public key failed",
+  "wallet.hardware.deviceStatus.launching_cardano_app": "Launch the Cardano application on your device",
+  "wallet.hardware.deviceStatus.ready": "Device ready and waiting for commands",
+  "wallet.hardware.deviceStatus.verifying_transaction": "Verify the transaction on your device in order to sign it",
+  "wallet.hardware.deviceStatus.verifying_transaction_failed": "Transaction verification and signing failed",
+  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "Transaction verified and signed",
   "wallet.hardware.hardwareWalletInstructions": "Follow instructions to access your wallet",
-  "wallet.hardware.hardwareWalletLedgerBegin": "To begin, connect and unlock your <span>Ledger Device</span>",
-  "wallet.hardware.hardwareWalletTrezorBegin": "To begin, connect and unlock your <span>Trezor Device</span>",
   "wallet.hardware.hardwareWalletTitle": "Hardware wallet",
   "wallet.hardware.ledgerWalletTitle": "Ledger wallet",
-  "wallet.hardware.openCardanoAppLabel": "https://daedaluswallet.io/",
   "wallet.hardware.trezorWalletTitle": "Trezor wallet",
   "wallet.import.file.dialog.buttonLabel": "Import wallets",
   "wallet.import.file.dialog.description": "<p>This feature enables you to import wallets from the previous version of Daedalus, from the Daedalus state directory, or from a ‘secret.key’ file.</p> <p>It can be used to import wallets quickly without entering the wallet recovery phrase for each wallet, or to import wallets for which you have lost your wallet recovery phrase.</p> <p>After importing a wallet for which you have lost your wallet recovery phrase, please create a new wallet and transfer all funds from the old wallet to the new wallet. <strong>Keep the wallet recovery phrase for your new wallet secure.</strong></p>",
