--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -515,16 +515,18 @@
   "wallet.create.dialog.title.itn": "報酬ウォレットを作成する",
   "wallet.create.dialog.validateStep": "!!!Validate",
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
-  "wallet.hardware.deviceConnectedLabel": "!!!「{deviceType}」 device",
-  "wallet.hardware.hardwareWalletBegin": "!!!To begin, connect and unlock your <span>Hardware wallet Device</span>",
-  "wallet.hardware.hardwareWalletExport": "!!!Export <span>public key</span> on your device",
-  "wallet.hardware.hardwareWalletExportRejected": "!!!Export rejected",
+  "wallet.hardware.deviceStatus.connecting": "!!!Connect your device and enter your PIN to unlock it",
+  "wallet.hardware.deviceStatus.exportingPublicKeyError": "!!!Disconnect and reconnect your device to start the process again",
+  "wallet.hardware.deviceStatus.exporting_public_key": "!!!Confirm exporting your public key on your device",
+  "wallet.hardware.deviceStatus.exporting_public_key_failed": "!!!Exporting public key failed",
+  "wallet.hardware.deviceStatus.launching_cardano_app": "!!!Launch the Cardano application on your device",
+  "wallet.hardware.deviceStatus.ready": "!!!Device ready and waiting for commands",
+  "wallet.hardware.deviceStatus.verifying_transaction": "!!!Verify the transaction on your device in order to sign it",
+  "wallet.hardware.deviceStatus.verifying_transaction_failed": "!!!Transaction verification and signing failed",
+  "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "!!!Transaction verified and signed",
   "wallet.hardware.hardwareWalletInstructions": "!!!Follow instructions to access your wallet",
-  "wallet.hardware.hardwareWalletLedgerBegin": "!!!To begin, connect and unlock your <span>Ledger Device</span>",
-  "wallet.hardware.hardwareWalletTrezorBegin": "!!!To begin, connect and unlock your <span>Trezor Device</span>",
   "wallet.hardware.hardwareWalletTitle": "!!!Hardware wallet",
   "wallet.hardware.ledgerWalletTitle": "!!!Ledger wallet",
-  "wallet.hardware.openCardanoAppLabel": "!!!https://daedaluswallet.io/",
   "wallet.hardware.trezorWalletTitle": "!!!Trezor wallet",
   "wallet.import.file.dialog.buttonLabel": "ウォレットをインポートする",
   "wallet.import.file.dialog.description": "<p>この機能により、Daedalusの旧バージョン、Daedalusステータスディレクトリー、またはsecret.keyファイルからウォレットをインポートすることができます。</p> <p>各ウォレットの復元フレーズを入力せずに素早くウォレットをインポートできるほか、復元フレーズを紛失したウォレットのインポートも可能です。</p> <p>復元フレーズを紛失したウォレットをインポートした場合は、インポート後に新規ウォレットを作成してすべての資金を旧ウォレットから移し、<strong>新しいウォレットの復元フレーズを安全な場所に保管してください。</strong></p>",
