--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -92,13 +92,13 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "ADA",
   "environment.network.development": "開発",
+  "environment.network.ff": "Shelley Friends & Family Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "メインネット",
   "environment.network.nightly": "Nightly",
   "environment.network.qa": "QA",
   "environment.network.selfnode": "Selfnode",
-  "environment.network.shelley_ff": "Shelley Friends & Family Testnet",
   "environment.network.shelley_qa": "Shelley QA",
   "environment.network.staging": "ステージング",
   "environment.network.testnet": "テストネット",
