--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -537,7 +537,7 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
-  "wallet.legacy.badge.label": "Balance",
+  "wallet.legacy.badge.label": "Legacy",
   "wallet.legacy.notification.actionLearnMore": "Learn more",
   "wallet.legacy.notification.actionMove": "Move testnet ada",
   "wallet.legacy.notification.addWallet": "Create a new Rewards wallet",
