--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -545,8 +545,8 @@
   "wallet.legacy.notification.addWalletDescription.line2": "テストネット用ADAのステークを委任して報酬を得るためには「報酬ウォレット」を作成してください。",
   "wallet.legacy.notification.addWalletTitle": "報酬ウォレットを作成してください",
   "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
-  "wallet.legacy.notification.moveFundsDescription.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
-  "wallet.legacy.notification.moveFundsDescription.line2": "テストネット用ADAのステークを委任して報酬を得るためには、テストネット用ADAを「報酬ウォレット」に移し替えてください。",
+  "wallet.legacy.notification.descriptionWithNoFunds.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
+  "wallet.legacy.notification.descriptionWithNoFunds.line2": "テストネット用ADAのステークを委任して報酬を得るためには、テストネット用ADAを「報酬ウォレット」に移し替えてください。",
   "wallet.legacy.notification.moveFundsTitle": "「{activeWalletName}」のテストネット用ADAを移し替えてください",
   "wallet.navigation.more": "その他",
   "wallet.navigation.receive": "入金",
